Fixed a spacing issue in driftsvarsler

--- a/source/css/scss-altinnett/objects/_dashboard.scss
+++ b/source/css/scss-altinnett/objects/_dashboard.scss
@@ -5,7 +5,7 @@
 .project-dashboard {
 
   input {
-    [type='time'] {
+    &[type='time'] {
       max-width: 100px;
     }
   }
